added code for scanning secure aadhar card QR Code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,26 +28,29 @@ repositories {
 }
 // Added by raj ends
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:23.4.0'
 
     // Added by raj
     // Supports Android 4.0.3 and later (API level 15)
-    compile 'com.journeyapps:zxing-android-embedded:2.0.1@aar'
+    implementation 'com.journeyapps:zxing-android-embedded:2.0.1@aar'
 
     // Supports Android 2.1 and later (API level 7), but not optimal for later Android versions.
     // If you only plan on supporting Android 4.0.3 and up, you don't need to include this.
-    compile 'com.journeyapps:zxing-android-legacy:2.0.1@aar'
+    implementation 'com.journeyapps:zxing-android-legacy:2.0.1@aar'
 
     // Convenience library to launch the scanning and encoding Activities.
     // It automatically picks the best scanning library from the above two, depending on the
     // Android version and what is available.
-    compile 'com.journeyapps:zxing-android-integration:2.0.1@aar'
+    implementation 'com.journeyapps:zxing-android-integration:2.0.1@aar'
 
     // Version 3.0.x of zxing core contains some code that is not compatible on Android 2.2 and earlier.
     // This mostly affects encoding, but you should test if you plan to support these versions.
     // Older versions e.g. 2.2 may also work if you need support for older Android versions.
-    compile 'com.google.zxing:core:3.0.1'
+    implementation 'com.google.zxing:core:3.0.1'
+
+    // Awesome JP2000 implemented for Android source: https://github.com/ThalesGroup/JP2ForAndroid
+    implementation 'com.gemalto.jp2:jp2-android:1.0'
     // Added by raj ends
 }
